
 * mlib: added function map
 * mlib: added generator related functions and macros
   * scan
   * scan-parallel, scan-sequential
   * dogenerator

 * fixed backquote expansion:
   e.g. `(a ,nil) was eval'd to (a); correct expansion is (a nil)
 * fixed compiled jmethod
 * fixed mlib: avoid possible stackoverflows when looping over larger sequences
   * remove, remove-if


Changes in JMurmel-1.2.2 relative to JMurmel-1.2.1

 * macroexpansion is no longer done on-the-fly but in a seperate macroexpansion phase.
   This fixes issues with macros being expanded that are actually defined later,
   or expanding the wrong version of a macro that is defined more than once.


Changes in JMurmel-1.2.1 relative to JMurmel-1.2

 * changed the interpreter to expand macros only once
 * changed the compiler so that the restriction "The list containing optional arguments cannot be used
   as an argument to `rplacd`." no longer exists

 * added the commandline argument --script, allow #!...!# as multiline comment to support hashbang scripts.
 * added --final-result and --no-final-result

 * fixed the compiler to tailcall-optimize let/let* dynamic


Changes in JMurmel-1.2 relative to JMurmel-1.1

 * changed/ fixed the behaviour around large numbers, no more silently cutting off decimal places
   when an integral number is needed
 * changed argument to sleep to "seconds" (was: internal-time-units-per-second),
   changed return value to nil (was: actually slept time in internal-time-units-per-second)
 * changed/ fixed "apply" from a special operator to a function, "apply" no longer is a reserved word,
   "apply" now accepts symbols as the first argument as well
 * changed "::": renamed to "jmethod", static Java methods no longer want "nil" as a first (ignored) argument
 * changed macroexpand-1 to return multiple values as one would expect
 * changed setq to create undefined variables on the fly in interpreted mode
